BOARD18 2.6.8 Release Notes
 
Changes from 2.6.7 Release:
Implemented fix for Issue 185 - Enhance PHP error logging part 3
Implemented fix for Issue 183 - Redesign layout of board18Misc page
Delete some unused jQuery Migration files

BOARD18 2.6.7 Release Notes
 
Changes from 2.6.6 Release:
Implemented fix for Issue 167 - Redesign layout of New Game page

BOARD18 2.6.6 Release Notes
 
Changes from 2.6.5 Release:
Implemented fix for Issue 170 - Upgrade jQuery to current version 

BOARD18 2.6.5 Release Notes
 
Changes from 2.6.4 Release:
Implemented fix for Issue 181 - Enhance PHP error logging part 2
Implemented fix for Issue 182 - Email address mismatch

BOARD18 2.6.4 Release Notes
 
Changes from 2.6.3 Release:
Implemented fix for Issue 176 - Enhance error reporting in emailPlayerID.php
Implemented fix for Issue 177 - Remediation of deprecated jQery Statements Pt. 1

BOARD18 2.6.3 Release Notes
 
Changes from 2.6.2 Release:
Implemented fix for Issue 172 - Invalid constant usage in sendEmail.php
Implemented fix for Issue 173 - General code cleanup following Bugs 165 & 171.
 
BOARD18 2.6.2 Release Notes
 
Changes from 2.6.1 Release:
Implemented fix for Issue 169 - Display game from board18Games.
Implemented fix for Issue 171 - Remove jQuery UI Position

BOARD18 2.6.1 Release Notes
 
Changes from 2.6.0 Release:
Implemented fix for Issue 165 - Remove jQuery Migrate

BOARD18 2.6.0 Release Notes
 
Changes from 2.5.11 Release:
Implemented fix for Issue 163 - Make player name fields "required".
Implemented fix for Issue 164 - Set page size of all BOARD18 admin lists to 20.
Implemented fix for Issue 166 - Require lower case on all Email Addresses.
Added more documentation to the headers of 12 JavaScript files.
Updated players guide to version 2.6

BOARD18 2.5.11 Release Notes
 
Changes from 2.5.10 Release:
Implemented fix for Issue 121 - Add a search feature to "View all games" page. 

BOARD18 2.5.10 Release Notes
 
Changes from 2.5.9 Release: