@@ -15,10 +15,10 @@
 require_once('auth.php');
 require_once('config.php');
 
-$link = @mysqli_connect(DB_HOST, DB_USER, 
+$link = mysqli_connect(DB_HOST, DB_USER, 
         DB_PASSWORD, DB_DATABASE);
 if (mysqli_connect_error()) {
-  $logMessage = 'MySQL Error: ' . mysqli_connect_error();
+  $logMessage = 'gameBox.php: MySQL Connect Error: ' . mysqli_connect_error();
   error_log($logMessage);
   exit;
 }
@@ -26,8 +26,8 @@ mysqli_set_charset($link, "utf-8");
 
 //Function to sanitize values received from the form. 
 //Prevents SQL injection
-function clean($link, $str) {
-  $str = @trim($str);
+function clean($link, $str2) {
+  $str = trim($str2);
   return mysqli_real_escape_string($link, $str);
 }
 
@@ -39,17 +39,16 @@ $qry1 = "SELECT json_text FROM box WHERE box_id='$boxid'";
 $result1 = mysqli_query($link, $qry1);
 if ($result1) {
   if (mysqli_num_rows($result1) == 0) { // Invalid box ID!
-  error_log("Check for valid game box: Invalid Box ID: " . $boxid);
+  error_log("gameBox.php: Check for valid game box: Invalid Box ID: " . $boxid);
   $_SESSION['SESS_HEADER_MESSAGE'] = 
     'The selected box is not in the data base!';
   header("location: ../board18Main.php");
   }
 } else {
-  error_log("Check for valid box: Query failed");
+  error_log("gameBox.php: Check for valid box: Query failed");
   exit;
 }
 
 $ad = mysqli_fetch_array($result1); // $ad[0] is json_data
 
 echo $ad[0];
-?>
