@@ -45,10 +45,10 @@ $errorResp = new Response();
 $errorResp->stat = "fail";
 $errResp = json_encode($errorResp);
 
-$conn = @mysqli_connect(DB_HOST, DB_USER, 
+$conn = mysqli_connect(DB_HOST, DB_USER, 
         DB_PASSWORD, DB_DATABASE);
 if (mysqli_connect_error()) {
-  $logMessage = 'MySQL Error 1: ' . mysqli_connect_error();
+  $logMessage = 'linkGet: MySQL Connect Error: ' . mysqli_connect_error();
   error_log($logMessage);
   echo $errResp;
   exit;
@@ -57,8 +57,8 @@ mysqli_set_charset($conn, "utf-8");
 
 //Function to sanitize values received from the form. 
 //Prevents SQL injection
-function clean($conn, $str) {
-  $str = @trim($str);
+function clean($conn, $str1) {
+  $str = trim($str1);
   return mysqli_real_escape_string($conn, $str);
 }
 
@@ -70,7 +70,7 @@ $qry1 = "SELECT link_name, link_url, activity_date
          FROM game_link WHERE game_id='$gameid'";
 $result1 = mysqli_query($conn, $qry1);
 if (!$result1) {
-  error_log("SELECT FROM game_link - Query failed");
+  error_log("linkGet: SELECT FROM game_link - Query failed");
   echo $errResp;
   exit;
 }
@@ -95,4 +95,3 @@ $succResp->stat = "success";
 $succResp->links = $linklist;
 echo json_encode($succResp, JSON_PARTIAL_OUTPUT_ON_ERROR);
 exit;
-?>
